--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,11 +1,15 @@
-FROM maven:3.9.11
+FROM python:3.9
 EXPOSE 8080
 WORKDIR /opt/server
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package
-RUN mv target/shipping-1.0.jar shipping.jar
-ENV CART_ENDPOINT="cart:8080" \
-    DB_HOST="mysql"
-CMD ["java","-jar","shipping.jar"]
-# CMD ["sleep","1000"]
+COPY payment.ini .
+COPY *.py .
+COPY requirements.txt .
+RUN pip3 install -r requirements.txt
+ENV CART_HOST="cart" \
+    CART_PORT="8080" \
+    USER_HOST="user" \
+    USER_PORT="8080" \
+    AMQP_HOST="rabbitmq" \
+    AMQP_USER="roboshop" \
+    AMQP_PASS="roboshop123"
+CMD ["uwsgi","--ini","payment.ini"]
